syntax = "proto3";

package proto;
import "ProtoPatient.proto";


message ProtoMessage{

    oneof message{
        PatientRequest patientRequest = 1;
        PatientResponse patientResponse =2;
        Sensor sensor =3;
    }

}


message PatientRequest{
    uint32 patientNumber = 1;
}

message PatientResponse{
    ProtoPatient patient =1;

}

message Sensor{
    uint32 value =1;
}
